<project xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>com.aeongames</groupId>
  <artifactId>StegsolvePlus</artifactId>
  <version>0.5.8-SNAPSHOT</version>
  
  <name>StegsolvePlus</name>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>
  
 <dependencies>
 	<dependency>
		<groupId>org.pushing-pixels</groupId>
  		<artifactId>radiance-common</artifactId>
  		<version>7.5.0</version>
	</dependency>
	<dependency>
  		<groupId>org.pushing-pixels</groupId>
  		<artifactId>radiance-theming</artifactId>
  		<version>7.5.0</version>
	</dependency>
	<dependency>
  		<groupId>org.pushing-pixels</groupId>
  		<artifactId>radiance-component</artifactId>
  		<version>7.5.0</version>
	</dependency>
 </dependencies>
    
</project>